--- a/MyPetShop/Content/main.css
+++ b/MyPetShop/Content/main.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:regular,italic,bold");
 
 /* common
