--- a/MyPetShop/Views/Pet/Index.cshtml
+++ b/MyPetShop/Views/Pet/Index.cshtml
@@ -5,6 +5,9 @@
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
+@{ var i = 0; }
+@{ var j = 0; }
+
 <div class="row">
     <div class="span12">
         <h4 class="title">
@@ -16,28 +19,54 @@
         <div id="myCarousel" class="myCarousel carousel slide">
             <div class="carousel-inner">
                 <div class="active item">
-                    <ul class="thumbnails">
-                        <li class="span3">
-                            <div class="product-box">
-                                <span class="sale_tag"></span>
-                                <p><a href="product_detail.html"><img src="~/Images/ladies/1.jpg" alt="" /></a></p>
-                                <a href="product_detail.html" class="title">Ut wisi enim ad</a><br />
-                                <a href="products.html" class="category">Commodo consequat</a>
-                                <p class="price">$17.25</p>
-                            </div>
-                        </li>
+                    <ul class="thumbnails">                           
+                        @foreach (var pet in Model)
+                        {
+                            if (i <= 3)
+                            {
+                                <li class="span3">
+                                    <div class="product-box">
+                                        <span class="sale_tag"></span>
+                                        <p><a href="product_detail.html"><img src="~/Images/corgi_1.png" alt=""/></a>
+                                        </p>
+                                        <a href="product_detail.html" class="title">@pet.Name</a><br/>
+                                        <a href="products.html" class="">AGE: @pet.Age years</a>
+                                        <p class="price">$@pet.Price</p>
+                                    </div>
+                                </li>
+                            }
+                            else
+                            {
+                                break;
+                            }
+                            i ++;
+                        }                  
                     </ul>
                 </div>
                 <div class="item">
+                    @{ i = 0; }
                     <ul class="thumbnails">
-                        <li class="span3">
-                            <div class="product-box">
-                                <p><a href="product_detail.html"><img src="~/Images/ladies/5.jpg" alt="" /></a></p>
-                                <a href="product_detail.html" class="title">Know exactly</a><br />
-                                <a href="products.html" class="category">Quis nostrud</a>
-                                <p class="price">$22.30</p>
-                            </div>
-                        </li>
+                        @foreach (var pet in Model)
+                        {
+                            if (i >= 4 && i <= 7)
+                            {
+                                <li class="span3">
+                                    <div class="product-box">
+                                        <span class="sale_tag"></span>
+                                        <p>
+                                            <a href="product_detail.html"><img src="~/Images/corgi_1.png" alt=""/></a>
+                                        </p>
+                                        <a href="product_detail.html" class="title">@pet.Name</a><br/>
+                                        <a href="products.html" class="">AGE: @pet.Age years</a>
+                                        <p class="price">$@pet.Price</p>
+                                    </div>
+                                </li>
+                            }
+
+                            i++;
+
+                        }
+
                     </ul>
                 </div>
             </div>
@@ -57,75 +86,54 @@
             <div class="carousel-inner">
                 <div class="active item">
                     <ul class="thumbnails">
-                        <li class="span3">
-                            <div class="product-box">
-                                <span class="sale_tag"></span>
-                                <p><a href="product_detail.html"><img src="~/Images/cloth/bootstrap-women-ware2.jpg" alt="" /></a></p>
-                                <a href="product_detail.html" class="title">Ut wisi enim ad</a><br />
-                                <a href="products.html" class="category">Commodo consequat</a>
-                                <p class="price">$25.50</p>
-                            </div>
-                        </li>
-                        <li class="span3">
-                            <div class="product-box">
-                                <p><a href="product_detail.html"><img src="~/Images/cloth/bootstrap-women-ware1.jpg" alt="" /></a></p>
-                                <a href="product_detail.html" class="title">Quis nostrud exerci tation</a><br />
-                                <a href="products.html" class="category">Quis nostrud</a>
-                                <p class="price">$17.55</p>
-                            </div>
-                        </li>
-                        <li class="span3">
-                            <div class="product-box">
-                                <p><a href="product_detail.html"><img src="~/Images/cloth/bootstrap-women-ware6.jpg" alt="" /></a></p>
-                                <a href="product_detail.html" class="title">Know exactly turned</a><br />
-                                <a href="products.html" class="category">Quis nostrud</a>
-                                <p class="price">$25.30</p>
-                            </div>
-                        </li>
-                        <li class="span3">
-                            <div class="product-box">
-                                <p><a href="product_detail.html"><img src="~/Images/cloth/bootstrap-women-ware5.jpg" alt="" /></a></p>
-                                <a href="product_detail.html" class="title">You think fast</a><br />
-                                <a href="products.html" class="category">World once</a>
-                                <p class="price">$25.60</p>
-                            </div>
-                        </li>
+                        @foreach (var pet in Model)
+                        {
+                            if (j <= 3)
+                            {
+                                <li class="span3">
+                                    <div class="product-box">
+                                        <span class="sale_tag"></span>
+                                        <p>
+                                            <a href="product_detail.html"><img src="~/Images/british_shorthair_1.png" alt="" /></a>
+                                        </p>
+                                        <a href="product_detail.html" class="title">@pet.Name</a><br />
+                                        <a href="products.html" class="">AGE: @pet.Age years</a>
+                                        <p class="price">$@pet.Price</p>
+                                    </div>
+                                </li>
+                            }
+                            else
+                            {
+                                break;
+                            }
+                            j++;
+
+                        }
+                        
                     </ul>
                 </div>
                 <div class="item">
+                    @{ j = 0; }
                     <ul class="thumbnails">
-                        <li class="span3">
-                            <div class="product-box">
-                                <p><a href="product_detail.html"><img src="~/Images/cloth/bootstrap-women-ware4.jpg" alt="" /></a></p>
-                                <a href="product_detail.html" class="title">Know exactly</a><br />
-                                <a href="products.html" class="category">Quis nostrud</a>
-                                <p class="price">$45.50</p>
-                            </div>
-                        </li>
-                        <li class="span3">
-                            <div class="product-box">
-                                <p><a href="product_detail.html"><img src="~/Images/cloth/bootstrap-women-ware3.jpg" alt="" /></a></p>
-                                <a href="product_detail.html" class="title">Ut wisi enim ad</a><br />
-                                <a href="products.html" class="category">Commodo consequat</a>
-                                <p class="price">$33.50</p>
-                            </div>
-                        </li>
-                        <li class="span3">
-                            <div class="product-box">
-                                <p><a href="product_detail.html"><img src="~/Images/cloth/bootstrap-women-ware2.jpg" alt="" /></a></p>
-                                <a href="product_detail.html" class="title">You think water</a><br />
-                                <a href="products.html" class="category">World once</a>
-                                <p class="price">$45.30</p>
-                            </div>
-                        </li>
-                        <li class="span3">
-                            <div class="product-box">
-                                <p><a href="product_detail.html"><img src="~/Images/cloth/bootstrap-women-ware1.jpg" alt="" /></a></p>
-                                <a href="product_detail.html" class="title">Quis nostrud exerci</a><br />
-                                <a href="products.html" class="category">Quis nostrud</a>
-                                <p class="price">$25.20</p>
-                            </div>
-                        </li>
+                        @foreach (var pet in Model)
+                        {
+
+                            if (j >= 4 && j <= 7)
+                            {
+                                <li class="span3">
+                                    <div class="product-box">
+                                        <span class="sale_tag"></span>
+                                        <p>
+                                            <a href="product_detail.html"><img src="~/Images/british_shorthair_1.png" alt=""/></a>
+                                        </p>
+                                        <a href="product_detail.html" class="title">@pet.Name</a><br/>
+                                        <a href="products.html" class="">AGE: @pet.Age years</a>
+                                        <p class="price">$@pet.Price</p>
+                                    </div>
+                                </li>
+                            }
+                            j++;
+                        }
                     </ul>
                 </div>
             </div>
