Edit CSS img pet

--- a/MyPetShop/Views/Pet/Index.cshtml
+++ b/MyPetShop/Views/Pet/Index.cshtml
@@ -7,7 +7,12 @@
 
 @{ var i = 0; }
 @{ var j = 0; }
-
+<style>
+    .product-box img{
+        width: 220px;
+        height: 320px;
+    }
+</style>
 <div class="row">
     <div class="span12">
         <h4 class="title">
