--- a/MyPetShop/Views/Shared/_LayoutUser.cshtml
+++ b/MyPetShop/Views/Shared/_LayoutUser.cshtml
@@ -77,18 +77,14 @@
                     <li>
                         <img src="~/Images/Slide/slide1.jpg" alt="" />
                         <div class="intro">
-                            <h1>Mid season sale</h1>
-                            <p><span>Up to 50% Off</span></p>
-                            <p><span>On selected items online and in stores</span></p>
+                            <h1>Hãy nhận nuôi một chú chó</h1>
+                            <p><span>Người yêu có thể không có</span></p>
+                            <p><span>Nhưng chó nhất định phải có một con!!</span></p>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
-    <section class="header_text">
-        We stand for top quality templates. Our genuine developers always optimized bootstrap commercial templates.
-        <br />Don't miss to use our cheap abd best bootstrap templates.
-    </section>
     
         <section class="main-content">
             <div class="row">
