--- a/MyPetShop/Views/Pet/Index.cshtml
+++ b/MyPetShop/Views/Pet/Index.cshtml
@@ -8,7 +8,7 @@
 @{ var j = 0; }
 <style>
     .product-box img{
-        width: 220px;
+        width: auto;
         height: 320px;
     }
 </style>
