add pet details view

--- a/MyPetShop/Views/Pet/Index.cshtml
+++ b/MyPetShop/Views/Pet/Index.cshtml
@@ -40,10 +40,10 @@
                                 <li class="span3">
                                     <div class="product-box">
                                         <span class="sale_tag"></span>
-                                        <p><a href="product_detail.html"><img src="@image" alt=""/></a>
+                                        <p><a href="@Url.Action("PetDetails", "Pet", new {id = pet.Id})"><img src="@image" alt=""/></a>
                                         </p>
-                                        <a href="product_detail.html" class="title">@pet.Name</a><br/>
-                                        <a href="products.html" class="">AGE: @pet.Age years</a>
+                                        <a href="@Url.Action("PetDetails", "Pet", new {id = pet.Id})" class="title">@pet.Name</a><br/>
+                                        <a href="@Url.Action("Products", "Pet", new {id = pet.CategoryPetId})" class="">AGE: @pet.Age years</a>
                                         <p class="price">$@pet.Price</p>
                                     </div>
                                 </li>
@@ -76,10 +76,10 @@
                                     <div class="product-box">
                                         <span class="sale_tag"></span>
                                         <p>
-                                            <a href="product_detail.html"><img src="@image" alt=""/></a>
+                                            <a href="@Url.Action("PetDetails", "Pet", new {id = pet.Id})"><img src="@image" alt=""/></a>
                                         </p>
-                                        <a href="product_detail.html" class="title">@pet.Name</a><br/>
-                                        <a href="products.html" class="">AGE: @pet.Age years</a>
+                                        <a href="@Url.Action("PetDetails", "Pet", new {id = pet.Id})" class="title">@pet.Name</a><br/>
+                                        <a href="@Url.Action("Products", "Pet", new {id = pet.CategoryPetId})" class="">AGE: @pet.Age years</a>
                                         <p class="price">$@pet.Price</p>
                                     </div>
                                 </li>
@@ -125,10 +125,10 @@
                                     <div class="product-box">
                                         <span class="sale_tag"></span>
                                         <p>
-                                            <a href="product_detail.html"><img src="@image" alt="" /></a>
+                                            <a href="@Url.Action("PetDetails", "Pet", new {id = pet.Id})"><img src="@image" alt="" /></a>
                                         </p>
-                                        <a href="product_detail.html" class="title">@pet.Name</a><br />
-                                        <a href="products.html" class="">AGE: @pet.Age years</a>
+                                        <a href="@Url.Action("PetDetails", "Pet", new {id = pet.Id})" class="title">@pet.Name</a><br />
+                                        <a href="@Url.Action("Products", "Pet", new {id = pet.CategoryPetId})" class="">AGE: @pet.Age years</a>
                                         <p class="price">$@pet.Price</p>
                                     </div>
                                 </li>
@@ -164,10 +164,10 @@
                                     <div class="product-box">
                                         <span class="sale_tag"></span>
                                         <p>
-                                            <a href="product_detail.html"><img src="@image" alt=""/></a>
+                                            <a href="@Url.Action("PetDetails", "Pet", new {id = pet.Id})"><img src="@image" alt=""/></a>
                                         </p>
-                                        <a href="product_detail.html" class="title">@pet.Name</a><br/>
-                                        <a href="products.html" class="">AGE: @pet.Age years</a>
+                                        <a href="@Url.Action("PetDetails", "Pet", new {id = pet.Id})" class="title">@pet.Name</a><br/>
+                                        <a href="@Url.Action("Products", "Pet", new {id = pet.CategoryPetId})" class="">AGE: @pet.Age years</a>
                                         <p class="price">$@pet.Price</p>
                                     </div>
                                 </li>
