--- a/MyPetShop/Views/Pet/Products.cshtml
+++ b/MyPetShop/Views/Pet/Products.cshtml
@@ -38,10 +38,10 @@
                         <div class="product-box">
                             <span class="sale_tag"></span>
                             <p>
-                                <a href="product_detail.html"><img src="@image" alt="" /></a>
+                                <a href="@Url.Action("PetDetails", "Pet", new {id = pet.Id})"><img src="@image" alt="" /></a>
                             </p>
                             <a href="product_detail.html" class="title">@pet.Name</a><br />
-                            <a href="products.html" class="">AGE: @pet.Age years</a>
+                            <a href="@Url.Action("Products", "Pet", new {id = pet.CategoryPetId})" class="">AGE: @pet.Age years</a>
                             <p class="price">$@pet.Price</p>
                         </div>
                     </li>
