show list menu in product and other product

--- a/MyPetShop/Views/Pet/Category.cshtml
+++ b/MyPetShop/Views/Pet/Category.cshtml
@@ -5,7 +5,7 @@
         @foreach (var category in Model.Categories)
         {
             <li>
-                @{ var cateName = category.Id == 1 ? "Chó" : "Mèo"; }
+                @{ var cateName = category.Id == 1 ? "Dog" : "Cat"; }
                 <a href="">@cateName</a>
                 <ul>
 
