--- a/MyPetShop/Views/Pet/Index.cshtml
+++ b/MyPetShop/Views/Pet/Index.cshtml
@@ -8,8 +8,11 @@
 @{ var j = 0; }
 <style>
     .product-box img{
-        width: auto;
+        width: 220px;
         height: 320px;
+    }
+    .product-box{
+        width:212px;
     }
 </style>
 <div class="row">
