--- a/MyPetShop/Views/Pet/PetDetails.cshtml
+++ b/MyPetShop/Views/Pet/PetDetails.cshtml
@@ -10,32 +10,37 @@
 <section class="main-content">
     <div class="row">
         <div class="span9">
-            <div class="row">
+@foreach (var pet in Model.Pets)
+{
+    var image = "";
+    foreach (var petImage in Model.PetImages)
+    {
+        if (petImage.PetId == pet.Id)
+        {
+            image = petImage.Uri.ToString();
+            break;
+        }
+    }  
+             <div class="row">
                 <div class="span4">
-                    <a href="themes/images/ladies/1.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 1"><img alt="" src="themes/images/ladies/1.jpg"></a>
+                   
+                    <a href="themes/images/ladies/1.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 1"><img alt="" src="@image"></a>
                     <ul class="thumbnails small">
                         <li class="span1">
-                            <a href="themes/images/ladies/2.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 2"><img src="themes/images/ladies/2.jpg" alt=""></a>
-                        </li>
-                        <li class="span1">
-                            <a href="themes/images/ladies/3.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 3"><img src="themes/images/ladies/3.jpg" alt=""></a>
-                        </li>
-                        <li class="span1">
-                            <a href="themes/images/ladies/4.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 4"><img src="themes/images/ladies/4.jpg" alt=""></a>
-                        </li>
-                        <li class="span1">
-                            <a href="themes/images/ladies/5.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 5"><img src="themes/images/ladies/5.jpg" alt=""></a>
-                        </li>
+                            <a href="themes/images/ladies/2.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 2"><img src="@image" alt=""></a>
+                        </li>                
                     </ul>
                 </div>
                 <div class="span5">
                     <address>
-                        <strong>Brand:</strong> <span>Apple</span><br>
-                        <strong>Product Code:</strong> <span>Product 14</span><br>
-                        <strong>Reward Points:</strong> <span>0</span><br>
-                        <strong>Availability:</strong> <span>Out Of Stock</span><br>
+                        <strong>Brand:</strong> <span></span><br>
+                        <strong>Name:</strong> <span>@pet.Name</span><br>
+                        <strong>Age:</strong> <span>@pet.Age</span><br>
+                        @{ var Status = @pet.Status == 0 ? " Avalable" : " Out of stock"; }
+                            <strong>Availability:</strong><span>@Status</span><br> 
+
                     </address>
-                    <h4><strong>Price: $587.50</strong></h4>
+                    <h4><strong>Price: $@pet.Price</strong></h4>
                 </div>
                 <div class="span5">
                     <form class="form-inline">
@@ -53,10 +58,11 @@
                     </form>
                 </div>
             </div>
+
             <div class="row">
                 <div class="span9">
                     <ul class="nav nav-tabs" id="myTab">
-                        <li class="active"><a href="#home">Description</a></li>
+                        <li class="active"><a href="#home">@pet.Description</a></li>
                         <li class=""><a href="#profile">Additional Information</a></li>
                     </ul>
                     <div class="tab-content">
@@ -77,6 +83,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+}
+
                 <div class="span9">
                     <br>
                     <h4 class="title">
@@ -151,17 +160,18 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="span3 col">
+                <div class="span3 col">
             <div class="block">
                 <ul class="nav nav-list">
-                    <li class="nav-header">SUB CATEGORIES</li>
+
+                    <li class="nav-header">CATEGORIES</li>
                     <li><a href="products.html">Nullam semper elementum</a></li>
                     <li class="active"><a href="products.html">Phasellus ultricies</a></li>
                     <li><a href="products.html">Donec laoreet dui</a></li>
                     <li><a href="products.html">Nullam semper elementum</a></li>
                     <li><a href="products.html">Phasellus ultricies</a></li>
                     <li><a href="products.html">Donec laoreet dui</a></li>
+
                 </ul>
                 <br />
                 <ul class="nav nav-list below">
@@ -233,7 +243,9 @@
                 </ul>
             </div>
         </div>
-    </div>
+        </div>
+
+   
 </section>
 
 <script src="~/Scripts/common.js"></script>
