Show Random pets in pet details

--- a/MyPetShop/Views/Pet/Index.cshtml
+++ b/MyPetShop/Views/Pet/Index.cshtml
@@ -8,11 +8,8 @@
 @{ var j = 0; }
 <style>
     .product-box img{
-        width: 220px;
+        width: auto;
         height: 320px;
-    }
-    .product-box{
-        width:212px;
     }
 </style>
 <div class="row">
