--- a/MyPetShop/Views/Pet/Products.cshtml
+++ b/MyPetShop/Views/Pet/Products.cshtml
@@ -11,11 +11,8 @@
 
 <style>
     .product-box img {
-        width: 220px;
+        width: auto;
         height: 320px;
-    }
-    .product-box {
-        width: 212px;
     }
 </style>
 
