--- a/MyPetShop/Views/Pet/Index.cshtml
+++ b/MyPetShop/Views/Pet/Index.cshtml
@@ -15,7 +15,7 @@
 <div class="row">
     <div class="span12">
         <h4 class="title">
-            <span class="pull-left"><span class="text"><span class="line">Feature <strong>Products</strong></span></span></span>
+            <span class="pull-left"><span class="text"><span class="line">Feature <strong>Dogs</strong></span></span></span>
             <span class="pull-right">
                 <a class="left button" href="#myCarousel" data-slide="prev"></a><a class="right button" href="#myCarousel" data-slide="next"></a>
             </span>
@@ -99,7 +99,7 @@
 <div class="row">
     <div class="span12">
         <h4 class="title">
-            <span class="pull-left"><span class="text"><span class="line">Latest <strong>Products</strong></span></span></span>
+            <span class="pull-left"><span class="text"><span class="line">Feature <strong>Cats</strong></span></span></span>
             <span class="pull-right">
                 <a class="left button" href="#myCarousel-2" data-slide="prev"></a><a class="right button" href="#myCarousel-2" data-slide="next"></a>
             </span>
