--- a/MyPetShop/Views/Pet/PetDetails.cshtml
+++ b/MyPetShop/Views/Pet/PetDetails.cshtml
@@ -22,143 +22,62 @@
                     }
                 }  
                      <div class="row">
-                        <div class="span4">
-                   
-                            <a href="themes/images/ladies/1.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 1"><img alt="" src="@image"></a>
+                        <div class="span4">          
+                            <a href="@image" class="thumbnail" data-fancybox-group="group1" title="Description 1"><img alt="" src="@image"></a>
                             <ul class="thumbnails small">
                                 <li class="span1">
-                                    <a href="themes/images/ladies/2.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 2"><img src="@image" alt=""></a>
+                                    <a href="@image" class="thumbnail" data-fancybox-group="group1" title="Description 2"><img src="@image" alt=""></a>
                                 </li>                
                             </ul>
                         </div>
-                        <div class="span5">
-                            <address>
-                                <strong>Brand:</strong> <span></span><br>
-                                <strong>Name:</strong> <span>@pet.Name</span><br>
-                                <strong>Age:</strong> <span>@pet.Age</span><br>
-                                @{ var Status = @pet.Status == 0 ? " Avalable" : " Out of stock"; }
-                                    <strong>Availability:</strong><span>@Status</span><br> 
-
-                            </address>
-                            <h4><strong>Price: $@pet.Price</strong></h4>
-                        </div>
+                         <div class="span5">
+                             <address class="petdetail">
+                                 <strong>Name:</strong> <span>@pet.Name</span><br><br/>
+                                 <strong>Age:</strong> <span>@pet.Age</span><br><br/>
+                                 @{ var status = @pet.Status == 0 ? " Available" : "Out of stock"; } 
+                                 <strong>Availability:</strong><span>@status</span><br> 
+                             </address>
+                             <h4><strong>Price: $@pet.Price</strong></h4>
+                         </div>
+                         
                         <div class="span5">
                             <form class="form-inline">
-                                <label class="checkbox">
-                                    <input type="checkbox" value=""> Option one is this and that
-                                </label>
                                 <br />
-                                <label class="checkbox">
-                                    <input type="checkbox" value=""> Be sure to include why it's great
-                                </label>
-                                <p>&nbsp;</p>
-                                <label>Qty:</label>
+                                <label class="petdetail">Qty:</label>
                                 <input type="text" class="span1" placeholder="1">
                                 <button class="btn btn-inverse" type="submit">Add to cart</button>
                             </form>
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="span9">
-                            <ul class="nav nav-tabs" id="myTab">
-                                <li class="active"><a href="#home">@pet.Description</a></li>
-                                <li class=""><a href="#profile">Additional Information</a></li>
-                            </ul>
-                            <div class="tab-content">
-                                <div class="tab-pane active" id="home">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem</div>
-                                <div class="tab-pane" id="profile">
-                                    <table class="table table-striped shop_attributes">
-                                        <tbody>
-                                            <tr class="">
-                                                <th>Size</th>
-                                                <td>Large, Medium, Small, X-Large</td>
-                                            </tr>
-                                            <tr class="alt">
-                                                <th>Colour</th>
-                                                <td>Orange, Yellow</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
+                <div class="row">
+                    @* This is tab description *@
+                    <div class="span9">
+                        <ul class="nav nav-tabs" id="myTab">
+                            <li class="active"><a href="#home">Description</a></li>
+                        </ul>
+                        <div class="tab-content">
+                            <div class="tab-pane active" id="home">@pet.Description</div>
                         </div>
                     </div>
-            }
-
-            <div class="span9">
-                    <br>
-                    <h4 class="title">
-                        <span class="pull-left"><span class="text"><strong>Related</strong> Products</span></span>
-                        <span class="pull-right">
-                            <a class="left button" href="#myCarousel-1" data-slide="prev"></a><a class="right button" href="#myCarousel-1" data-slide="next"></a>
-                        </span>
-                    </h4>
-                    <div id="myCarousel-1" class="carousel slide">
-                        <div class="carousel-inner">
-                            <div class="active item">
-                                <ul class="thumbnails listing-products">
-                                    <li class="span3">
-                                        <div class="product-box">
-                                            <span class="sale_tag"></span>
-                                            <a href="product_detail.html"><img alt="" src="themes/images/ladies/6.jpg"></a><br />
-                                            <a href="product_detail.html" class="title">Wuam ultrices rutrum</a><br />
-                                            <a href="#" class="category">Suspendisse aliquet</a>
-                                            <p class="price">$341</p>
-                                        </div>
-                                    </li>
-                                    <li class="span3">
-                                        <div class="product-box">
-                                            <span class="sale_tag"></span>
-                                            <a href="product_detail.html"><img alt="" src="themes/images/ladies/5.jpg"></a><br />
-                                            <a href="product_detail.html" class="title">Fusce id molestie massa</a><br />
-                                            <a href="#" class="category">Phasellus consequat</a>
-                                            <p class="price">$341</p>
-                                        </div>
-                                    </li>
-                                    <li class="span3">
-                                        <div class="product-box">
-                                            <a href="product_detail.html"><img alt="" src="themes/images/ladies/4.jpg"></a><br />
-                                            <a href="product_detail.html" class="title">Praesent tempor sem</a><br />
-                                            <a href="#" class="category">Erat gravida</a>
-                                            <p class="price">$28</p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="item">
-                                <ul class="thumbnails listing-products">
-                                    <li class="span3">
-                                        <div class="product-box">
-                                            <span class="sale_tag"></span>
-                                            <a href="product_detail.html"><img alt="" src="themes/images/ladies/1.jpg"></a><br />
-                                            <a href="product_detail.html" class="title">Fusce id molestie massa</a><br />
-                                            <a href="#" class="category">Phasellus consequat</a>
-                                            <p class="price">$341</p>
-                                        </div>
-                                    </li>
-                                    <li class="span3">
-                                        <div class="product-box">
-                                            <a href="product_detail.html"><img alt="" src="themes/images/ladies/2.jpg"></a><br />
-                                            <a href="product_detail.html">Praesent tempor sem</a><br />
-                                            <a href="#" class="category">Erat gravida</a>
-                                            <p class="price">$28</p>
-                                        </div>
-                                    </li>
-                                    <li class="span3">
-                                        <div class="product-box">
-                                            <span class="sale_tag"></span>
-                                            <a href="product_detail.html"><img alt="" src="themes/images/ladies/3.jpg"></a><br />
-                                            <a href="product_detail.html" class="title">Wuam ultrices rutrum</a><br />
-                                            <a href="#" class="category">Suspendisse aliquet</a>
-                                            <p class="price">$341</p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
+                    
+                    @* This is Related Product *@
+                    <div class="span9">
+                        <br>
+                        <h4 class="title">
+                            <span class="pull-left"><span class="text"><strong>Related</strong> Pets</span></span>
+                            <span class="pull-right">
+                                <a class="left button" href="#myCarousel-1" data-slide="prev"></a><a class="right button" href="#myCarousel-1" data-slide="next"></a>
+                            </span>
+                        </h4>
+                        <div id="myCarousel-1" class="carousel slide">
+                            @Html.Action("RelatedPets", "Pet", new { petId = pet.Id})
                         </div>
                     </div>
                 </div>
+            }
+            
+
         </div>
             <div class="span3 col">
                 <div class="block">
@@ -167,7 +86,7 @@
                 </div>
                 <div class="block">
                     <h4 class="title">
-                        <span class="pull-left"><span class="text">Other Products</span></span>
+                        <span class="pull-left"><span class="text">Random Pets</span></span>
                         <span class="pull-right">
                             <a class="left button" href="#myCarousel" data-slide="prev"></a><a class="right button" href="#myCarousel" data-slide="next"></a>
                         </span>
@@ -183,15 +102,17 @@
 </section>
 
 <script src="~/Scripts/common.js"></script>
+<script src="~/Scripts/jquery.fancybox.js"></script>
 
 <script>
-    $(function () {
+    $(function() {
         $('#myTab a:first').tab('show');
-        $('#myTab a').click(function (e) {
+        $('#myTab a').click(function(e) {
             e.preventDefault();
             $(this).tab('show');
-        })
-    })
+        });
+    });
+
     $(document).ready(function() {
         $('.thumbnail').fancybox({
             openEffect  : 'none',
