--- a/MyPetShop/Views/Shared/_LoginPartial.cshtml
+++ b/MyPetShop/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,7 @@
                     <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
                 </ul>
             </li>         
-            <li><a href="#">Your Cart</a></li>
+            <li><a href="@Url.Action("YourCart", "Pet")">Your Cart</a></li>
             <li><a href="#">Checkout</a></li>	
         </ul>
     }
